fix (style.css->#score) : align moves and points counters to right side. Add new span in index.html which contain this counters

--- a/style.css
+++ b/style.css
@@ -10,6 +10,7 @@ body
     width: 80%;
     margin-left: auto;
     margin-right: auto;
+    padding: 1.5%;
 }
 
 #scoreboard {
@@ -32,6 +33,12 @@ body
     display: inline-block;
     border-radius: 2px;
     margin: 3px;
+}
+
+#score
+{
+    float: right;
+    padding-right: 10px;
 }
 
 #initial_page
